--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -37,7 +37,7 @@ Test:
     steps:
       - run: echo "🧪 Testing..."
       
-  load-Test:
+Load-test:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     needs: Build
@@ -47,7 +47,7 @@ Test:
           echo "🧪 Testing..."
           sleep 15
 
-  Production:
+Production:
     runs-on: ubuntu-latest
     needs: [Test, Load-Test]
     environment:
