--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,19 +1,16 @@
 
 name: Github Actions Demo 
-on: 
-  push:  
-    branches: [main]
-    path-ignore: [.github/**]
-pull_request:
-    branches: [main]
-schedule:
-    - cron: '15 6 * * 0' 
-workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Environment to deploy to'
-        type: environment
-        required: true
+on:
+  push:
+    branches: [ main ]
+    paths-ignore: [.github/**]
+  pull_request:
+    branches: [ main ]
+  schedule:
+    - cron: '15 6 * * 0'
+  workflow_dispatch:
+
+
 
 jobs:
   Build:
@@ -29,15 +26,15 @@ jobs:
         run: |
           echo "The repository ${{ github.repository }} contains the following files:"
           tree
-Test:
+  Test:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     needs: Build
     environment: Test
     steps:
       - run: echo "🧪 Testing..."
-      
-Load-test:
+
+  Load-Test:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     needs: Build
@@ -47,14 +44,14 @@ Load-test:
           echo "🧪 Testing..."
           sleep 15
 
-Production:
+  Production:
     runs-on: ubuntu-latest
     needs: [Test, Load-Test]
     environment:
       name: Production
       url: https://writeabout.net
     if: github.event.inputs.environment == 'Production'
-      steps:
+    steps:
       - run: |
           echo "🚀 Step 1..."
           sleep 10
